V0.8
---------
 * Added support for right to left layouts as far as needed.

V0.7.4
---------
 * Don't duplicate the field (line-edit) of a spinbox.
 * When drawing the interior and frame of an editable combobox, don't cover its line-edit area.

V0.7.3
---------
 * Mostly rely on own colors defined under the GeneralColors section.

V0.7.2
---------
 * Added a hacking variable for KTitleWidget.
 * Made toolbox labels respect custom colors.

V0.7.1
---------
 * Added a Hacks section. Currently it has only one hack for Dolphin.
 * Remove flat backgrounds from scroll areas also when they are inside toolboxes.
 * Use update() instead of repaint() to make busy progressbars take less CPU time.

V0.7
---------
 * Added a theme manager for installing and choosing Kvantum themes.
 * Remember the last chosen path in the open dialog of Kvantum Manager.
 * Make use of Kvantum Manager's statusbar.

V0.6.3
---------
 * Use "sudo make install" for installation.
 * Added a new variable for spreading the indicator of a progressbar across its whole groove and not just its interior.
 * Removed ugly (flat) backgrounds from toolboxes.

V0.6.2
---------
 * Don't display a combo toggled when its menu isn't shown.
 * Don't use the focus text color for toggled or pressed widgets.
 * Added a toggle text color (distinct from press text color).
 * Level a popup list with the bottom or top edge of its combobox while not letting the former cover the latter.
 * Don't use toggled and pressed states for the progressbar indicator.

V0.6.1
---------
 * Organized frame and interior rendering (some frame parts were rendered twice).
 * Ignore the pressed state for tabs.
 * Don't use toolbar's frame and interior size specifications for its handle or separator.
 * With styled window backgrounds, remove ugly flat backgrounds from scroll areas even when they have frame.
 * Added a 2px right margin to menu-items when they have arrow or check/radio button.
 * Fixed transparent MDI subwindows.

V0.6
---------