@@ -3,6 +3,8 @@
 
 //#include <QtGui>
 #include "ui_kvantummanager.h"
+#include <QProcess>
+#include <QCloseEvent>
 
 namespace Ui {
 class KvantumManager;
@@ -23,14 +25,16 @@ private slots:
     void txtChanged (const QString &txt);
     void tabChanged (int index);
     void selectionChanged (int);
+    void preview();
 
 private:
-    //void closeEvent (QCloseEvent *event);
+    void closeEvent (QCloseEvent *event);
     void notWritable();
     bool isThemeDir (const QString &folder);
     void updateThemeList();
     Ui::KvantumManager *ui;
     QString lastPath;
+    QProcess *process;
 };
 
 #endif // KVANTUMMANAGER_H
