@@ -1,6 +1,7 @@
 V0.8
 ---------
  * Added support for right to left layouts as far as needed.
+ * Start kvantumpreview from Kvantum Manager.
 
 V0.7.4
 ---------
